--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <title>Prework Study Guide</title>
   </head>
   <body>
-    <header id="top">
-      <h1>Prework Study Guide</h1>
-      <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <header id ="top">
+        <h1>Prework Study Guide</h1>
+        <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie."/>
+        <h2>✨ Open the Console to See What's Happening ✨</h2>
+      
     </header>
     <main>
       <section class="card" id="html-section">
@@ -48,6 +50,10 @@
 
     <footer>
       <p>I can code!</p>
+
     </footer>
+
+    <script src="./assets/script.js"></script>
+
   </body>
 </html>
